--- a/backend/package.json
+++ b/backend/package.json
@@ -5,24 +5,6 @@
     "author":  "Badi Platform Team",
     "private":  true,
     "license":  "UNLICENSED",
-    "scripts":  {
-                    "build":  "nest build",
-                    "format":  "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-                    "start":  "nest start",
-                    "start:dev":  "nest start --watch",
-                    "start:debug":  "nest start --debug --watch",
-                    "start:prod":  "node dist/main",
-                    "lint":  "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-                    "test":  "jest",
-                    "test:watch":  "jest --watch",
-                    "test:cov":  "jest --coverage",
-                    "test:debug":  "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-                    "test:e2e":  "jest --config ./test/jest-e2e.json",
-                    "prisma:generate":  "prisma generate",
-                    "prisma:migrate":  "prisma migrate dev",
-                    "prisma:deploy":  "prisma migrate deploy",
-                    "prisma:studio":  "prisma studio"
-                },
     "jest":  {
                  "moduleFileExtensions":  [
                                               "js",
@@ -88,5 +70,27 @@
                             "tsconfig-paths":  "^4.2.0",
                             "typescript":  "^5.7.3",
                             "typescript-eslint":  "^8.20.0"
-                        }
+                        },
+    "scripts":  {
+                    "build":  "nest build",
+                    "format":  "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+                    "start":  "nest start",
+                    "start:dev":  "nest start --watch",
+                    "start:debug":  "nest start --debug --watch",
+                    "start:prod":  "node dist/main",
+                    "lint":  "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+                    "test":  "jest",
+                    "test:watch":  "jest --watch",
+                    "test:cov":  "jest --coverage",
+                    "test:debug":  "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+                    "test:e2e":  "jest --config ./test/jest-e2e.json",
+                    "prisma:generate":  "node scripts/prisma/build-schema.mjs \u0026\u0026 prisma generate",
+                    "prisma:migrate":  "node scripts/prisma/build-schema.mjs \u0026\u0026 prisma migrate dev",
+                    "prisma:deploy":  "node scripts/prisma/build-schema.mjs \u0026\u0026 prisma migrate deploy",
+                    "prisma:studio":  "node scripts/prisma/build-schema.mjs \u0026\u0026 prisma studio",
+                    "prisma:seed":  "node scripts/prisma/build-schema.mjs \u0026\u0026 prisma db seed"
+                },
+    "prisma":  {
+                   "seed":  "ts-node --transpile-only prisma/seed.ts"
+               }
 }
