--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -41,6 +41,7 @@
                         },
     "include":  [
                     "src/**/*",
-                    "scripts/**/*"
+                    "scripts/**/*",
+                    "prisma/**/*.ts"
                 ]
 }
