feat: allow admin-managed teachers with subject scopes

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -38,7 +38,11 @@
                                           "@/*":  [
                                                       "./src/*"
                                                   ]
-                                      }
+                                      },
+                            "types":  [
+                                          "vitest/globals",
+                                          "@testing-library/jest-dom"
+                                      ]
                         },
     "include":  [
                     "next-env.d.ts",
