--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,40 +1,47 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack -p 3010",
-    "build": "next build",
-    "start": "next start -p 3010",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
-    "lucide-react": "^0.544.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.63.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.11",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
-  }
+    "name":  "frontend",
+    "version":  "0.1.0",
+    "private":  true,
+    "scripts":  {
+                    "dev":  "next dev --turbopack -p 3010",
+                    "build":  "next build",
+                    "start":  "next start -p 3010",
+                    "lint":  "next lint",
+                    "test":  "vitest run"
+                },
+    "dependencies":  {
+                         "@hookform/resolvers":  "^5.2.2",
+                         "@radix-ui/react-label":  "^2.1.7",
+                         "@radix-ui/react-slot":  "^1.2.3",
+                         "class-variance-authority":  "^0.7.1",
+                         "clsx":  "^2.1.1",
+                         "dotenv":  "^17.2.3",
+                         "lucide-react":  "^0.544.0",
+                         "next":  "15.5.4",
+                         "react":  "19.1.0",
+                         "react-dom":  "19.1.0",
+                         "react-hook-form":  "^7.63.0",
+                         "sonner":  "^2.0.7",
+                         "tailwind-merge":  "^3.3.1",
+                         "zod":  "^4.1.11",
+                         "zustand":  "^5.0.8"
+                     },
+    "devDependencies":  {
+                            "@eslint/eslintrc":  "^3",
+                            "@tailwindcss/postcss":  "^4",
+                            "@types/node":  "^20",
+                            "@types/react":  "^19",
+                            "@types/react-dom":  "^19",
+                            "eslint":  "^9",
+                            "eslint-config-next":  "15.5.4",
+                            "tailwindcss":  "^4",
+                            "tw-animate-css":  "^1.4.0",
+                            "typescript":  "^5",
+                            "@testing-library/react":  "^15.0.0-rc.1",
+                            "@testing-library/jest-dom":  "^6.4.2",
+                            "@testing-library/user-event":  "^14.6.1",
+                            "msw":  "^2.3.1",
+                            "vitest":  "^1.6.0",
+                            "jsdom":  "^25.0.1"
+                        }
 }
