--- a/backend/package.json
+++ b/backend/package.json
@@ -27,25 +27,6 @@
                                           "^@shared/(.*)$":  "\u003crootDir\u003e/shared/$1"
                                       }
              },
-    "dependencies":  {
-                         "@casl/ability":  "^6.4.0",
-                         "@casl/prisma":  "^1.4.1",
-                         "@nestjs/common":  "^11.0.1",
-                         "@nestjs/config":  "^4.0.0",
-                         "@nestjs/core":  "^11.0.1",
-                         "@nestjs/cqrs":  "^11.0.3",
-                         "@nestjs/jwt":  "^11.0.0",
-                         "@nestjs/passport":  "^11.0.0",
-                         "@nestjs/platform-express":  "^11.0.1",
-                         "@prisma/client":  "^6.16.2",
-                         "argon2":  "^0.44.0",
-                         "class-transformer":  "^0.5.1",
-                         "class-validator":  "^0.14.1",
-                         "passport":  "^0.7.0",
-                         "passport-jwt":  "^4.0.1",
-                         "reflect-metadata":  "^0.2.2",
-                         "rxjs":  "^7.8.1"
-                     },
     "devDependencies":  {
                             "@eslint/eslintrc":  "^3.2.0",
                             "@eslint/js":  "^9.18.0",
@@ -97,5 +78,25 @@
                 },
     "prisma":  {
                    "seed":  "ts-node --transpile-only prisma/seed.ts"
-               }
+               },
+    "dependencies":  {
+                         "@casl/ability":  "^6.4.0",
+                         "@casl/prisma":  "^1.4.1",
+                         "@nestjs/common":  "^11.0.1",
+                         "@nestjs/config":  "^4.0.0",
+                         "@nestjs/core":  "^11.0.1",
+                         "@nestjs/cqrs":  "^11.0.3",
+                         "@nestjs/jwt":  "^11.0.0",
+                         "@nestjs/passport":  "^11.0.0",
+                         "@nestjs/platform-express":  "^11.0.1",
+                         "@prisma/client":  "^6.16.2",
+                         "argon2":  "^0.44.0",
+                         "class-transformer":  "^0.5.1",
+                         "class-validator":  "^0.14.1",
+                         "passport":  "^0.7.0",
+                         "passport-jwt":  "^4.0.1",
+                         "reflect-metadata":  "^0.2.2",
+                         "rxjs":  "^7.8.1",
+                         "bullmq":  "^5.11.0"
+                     }
 }
